Update index.html and other changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upload File Excel</title>
+    <title>Xử lý file</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -249,7 +249,7 @@
 
     <!-- Nội dung chính -->
     <div class="container">
-      <h1>Upload File Excel</h1>
+      <h1>Upload File</h1>
       <p class="description">
         Ứng dụng này cho phép bạn tải lên file dữ liệu và xử lý dữ liệu một cách
         nhanh chóng.
